plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

subprojects {
    group = 'org.msa'
    version = '0.0.1'
    sourceCompatibility = '17'

    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-test-fixtures'

    repositories {
        mavenCentral()
    }

    ext {
        set('springCloudVersion', "2024.0.1")
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    bootJar { enabled = false }
    jar { enabled = true }
}

project(':user-service') {
    dependencies {
        implementation project(':common')
        implementation(testFixtures(project(":common")))
    }
}

project(':account-service') {
    dependencies {
        implementation project(':common')
        implementation(testFixtures(project(":common")))
    }
}

project(':product-service') {
    dependencies {
        implementation project(':common')
        implementation(testFixtures(project(":common")))
    }
}

project(':order-service') {
    dependencies {
        implementation project(':common')
        implementation(testFixtures(project(":common")))
    }
}